added GET by id file endpoint
